--- a/hosts.json5
+++ b/hosts.json5
@@ -1,5 +1,6 @@
 {
   game_host: 'http://gfcn-game.gw.merge.sunborngame.com/index.php/1000',
   cdn_host: 'http://gf-cn.cdn.sunborngame.com',
-  asset_host: 'http://gf-cn.cdn.sunborngame.com'
+  asset_host: 'http://gf-cn.cdn.sunborngame.com',
+  channel: 'cn_mica'
 }
