--- a/hosts.json5
+++ b/hosts.json5
@@ -2,6 +2,6 @@
   game_host: 'http://gfcn-game.gw.merge.sunborngame.com/index.php/1000',
   cdn_host: 'http://gf-cn.cdn.sunborngame.com',
   asset_host: 'http://gf-cn.cdn.sunborngame.com',
-  transit_host: 'http://gfcn-transit.gw.sunborngame.com/index.php',
+  transit_host: 'https://gfcn-transit-gw.sunborngame.com/index.php',
   channel: 'cn_mica'
 }
